objects/FieloCRUD__PageLayout__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__BackActionMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Menu that handles back action through the page layout. Commonly is the menu that contains the list view component which references this page layout.</inlineHelpText>
        <label>Back Action Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Back Actions from Page Layouts</relationshipLabel>
        <relationshipName>PageLayoutBackAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ButtonsAlignment__c</fullName>
        <inlineHelpText>Defines buttons alignment within the page layout.</inlineHelpText>
        <label>Buttons Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                    <default>true</default>
                    <label>Center</label>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__ButtonsPlacement__c</fullName>
        <inlineHelpText>Defines where buttons will appear, if at the top, at the bottom or in both places.</inlineHelpText>
        <label>Buttons Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__CSSContent__c</fullName>
        <defaultValue>&apos;.greenBkg { background:#dff0d8; padding:10px; margin-bottom:10px; font-size: 14px; color: #468847;}&apos;</defaultValue>
        <label>CSS Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>System must always have one default page layout which is going to be used for record creation and in case of a misconfiguration on multi-layout functionality.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__DeleteActionMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Override the delete action by adding a menu that handles record deletion through page layout.</inlineHelpText>
        <label>Delete Action Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Delete Actions from Page Layouts</relationshipLabel>
        <relationshipName>PageLayoutDeleteAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__DeletionFrom__c</fullName>
        <inlineHelpText>Define whether the deletion of the record will be done directly on the page layout, on the delete action menu or if there is no delete action on the page layout.</inlineHelpText>
        <label>Deletion From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
                <value>
                    <fullName>Action Menu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__DontCreateMemberUser__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is for use on the Member object only. If checked (True), when creating a new member record, Fielo won&apos;t automatically create the User record.</inlineHelpText>
        <label>Don&apos;t Create Member User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__EditActionMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Menu that handles record edition through page layout. Commonly is a menu that contains a CRUD component that references this page layout but it can also be a custom page.</inlineHelpText>
        <label>Edit Action Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Edit Actions from Page Layouts</relationshipLabel>
        <relationshipName>PageLayoutEditAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HTMLContent__c</fullName>
        <defaultValue>&apos;&lt;p class=&quot;greenBkg&quot;&gt;&lt;b&gt;The form was successfully submitted.&lt;/b&gt;&lt;/p&gt;&apos;</defaultValue>
        <inlineHelpText>This HTML content will be displayed if the submission of the form is a success.</inlineHelpText>
        <label>HTML Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HideBackButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide back button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelSaveButton__c</fullName>
        <label>Label Save button</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ObjectAPIName__c</fullName>
        <formula>FieloCRUD__ObjectSettings__r.FieloCRUD__ObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ObjectSettings__c</fullName>
        <label>Object Settings</label>
        <referenceTo>FieloCRUD__ObjectSettings__c</referenceTo>
        <relationshipLabel>Page Layouts</relationshipLabel>
        <relationshipName>PageLayouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SaveActionMenuOverride__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Override where a record should redirect after creation. If this field is not completed it will take into account the configuration of the list view that references this page layout.</inlineHelpText>
        <label>Save Action Menu (Override)</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Save Actions from Page Layouts</relationshipLabel>
        <relationshipName>PageLayoutSaveAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ValueToDefinePageLayout__c</fullName>
        <inlineHelpText>Complete with the value that the field defined in &quot;Field To Define Page Layout&quot; of the related object setting should take in order to display this page layout.</inlineHelpText>
        <label>Value To Define Page Layout</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Page Layout</label>
    <nameField>
        <label>Page Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Layouts</pluralLabel>
    <recordTypes>
        <fullName>FieloCRUD__Form</fullName>
        <active>true</active>
        <description>Form page layout is always displayed in editable mode (ex. contact us form).</description>
        <label>Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__Profile</fullName>
        <active>true</active>
        <description>Profile page layout allows to create friendlier member&apos;s profile.</description>
        <label>Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__Standard</fullName>
        <active>true</active>
        <description>Standard page layouts can be access through list views in order to create, edit or view details of a record.</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__Static</fullName>
        <active>true</active>
        <description>Static page layouts are referenced directly from CRUD components and  can be access through list views or redirect menus.</description>
        <label>Static</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloCRUD__PageLayout_ProfileOnlyForMember</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	RecordType.DeveloperName = &apos;Profile&apos;,
	FieloCRUD__ObjectSettings__r.FieloCRUD__ObjectAPIName__c &lt;&gt; &apos;FieloEE__Member__c&apos;
)</errorConditionFormula>
        <errorMessage>Profile record type is only available for object settings related to &quot;FieloEE__Member__c&quot; object.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCRUD__PageLayout_Type</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(FieloCRUD__ValueToDefinePageLayout__c))
&amp;&amp;
ISBLANK(FieloCRUD__ObjectSettings__r.FieloCRUD__FieldToDefinePageLayout__c)</errorConditionFormula>
        <errorDisplayField>FieloCRUD__ValueToDefinePageLayout__c</errorDisplayField>
        <errorMessage>Please complete the field &quot;Field To Define Page Layout&quot; in the related &quot;Object Settings&quot; record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCRUD__PageLayout_TypeIsMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	FieloCRUD__Default__c = FALSE,
	NOT(ISBLANK(FieloCRUD__ObjectSettings__r.FieloCRUD__FieldToDefinePageLayout__c )),
	ISBLANK(FieloCRUD__ValueToDefinePageLayout__c),
	RecordType.DeveloperName = &apos;Standard&apos;
)</errorConditionFormula>
        <errorDisplayField>FieloCRUD__ValueToDefinePageLayout__c</errorDisplayField>
        <errorMessage>You must include type if the object setting has a field that defines layout.</errorMessage>
    </validationRules>
</CustomObject>